<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:padding="20dp"
    android:layout_height="match_parent"
    android:background="@drawable/bg_dark">

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:id="@+id/lbl_app_name"
        android:layout_marginBottom="10dp"
        android:layout_above="@+id/lbl_app_ver"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:gravity="center"
        android:textStyle="bold"
        android:textSize="24dp"
        android:textColor="#ffffff" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_ver"
        android:id="@+id/lbl_app_ver"
        android:layout_above="@+id/ic_jobbi_logo"
        android:layout_alignLeft="@+id/lbl_app_name"
        android:layout_alignStart="@+id/lbl_app_name"
        android:textColor="#ffffff"
        android:gravity="center" />

    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/ic_jobbi_logo"
        android:src="@drawable/ic_logo"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="30dp"
        android:layout_gravity="center"
        android:contentDescription="@string/menu_about"
        android:foregroundGravity="center"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_dev"
        android:id="@+id/lbl_app_dev"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:textColor="#ffffff"
        android:layout_below="@+id/ic_jobbi_logo"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />


    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_ryt"
        android:id="@+id/lbl_app_ryt"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/lbl_app_dev"
        android:layout_alignLeft="@+id/lbl_app_dev"
        android:layout_alignStart="@+id/lbl_app_dev"
        android:textColor="#ffffff"
        android:gravity="center" />

</RelativeLayout>