<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorLayout"
    android:padding="10dp"
    android:layout_marginBottom="6dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/list_Id"
            android:textColor="@color/colorLayout"
            android:id="@+id/event_id" />

        <ImageView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/event_image"
            android:src="@drawable/event"
            android:layout_gravity="center_horizontal" />
    </RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="10dp"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:width="80dp"
            android:text="@string/event_title"
            android:layout_height="match_parent" />
        <TextView
            android:layout_width="wrap_content"
            android:text="@string/app_name"
            android:id="@+id/event_title"
            android:textStyle="bold|italic"
            android:layout_height="match_parent" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="10dp"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:width="80dp"
            android:text="@string/event_date"
            android:layout_height="match_parent" />
        <TextView
            android:layout_width="wrap_content"
            android:text="@string/app_name"
            android:id="@+id/event_date"
            android:textStyle="bold|italic"
            android:layout_height="match_parent" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="10dp"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:width="80dp"
            android:text="@string/event_venue"
            android:layout_height="match_parent" />
        <TextView
            android:layout_width="wrap_content"
            android:text="@string/app_name"
            android:id="@+id/event_venue"
            android:textStyle="bold|italic"
            android:layout_height="match_parent" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="10dp"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:width="80dp"
            android:text="@string/event_price"
            android:layout_height="match_parent" />
        <TextView
            android:layout_width="wrap_content"
            android:text="@string/app_name"
            android:id="@+id/event_price"
            android:textStyle="bold|italic"
            android:layout_height="match_parent" />
    </LinearLayout>

</LinearLayout>