<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:id="@+id/icons_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="6dp"
    android:background="@color/colorBackground"
    tools:context=".LoginActivity">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:id="@+id/scrollView"
        android:scrollbars="none"
        android:layout_gravity="center_horizontal">

        <LinearLayout
            android:layout_width="fill_parent"
            android:orientation="vertical"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorLayout"
                android:padding="10dp"
                android:text="@string/new_ghive"
                android:layout_marginBottom="6dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:background="@color/colorLayout"
                android:padding="10dp"
                android:layout_marginBottom="6dp"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/new_name"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="5dp"/>

                <EditText
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:id="@+id/new_name"
                    android:padding="6dp"
                    android:layout_marginBottom="30dp"
                    android:background="@color/colorTextbox"/>

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/new_email"
                    android:layout_marginBottom="5dp" />

                <EditText
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:id="@+id/new_email"
                    android:background="@color/colorTextbox"
                    android:layout_marginBottom="30dp"
                    android:padding="6dp"/>

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:text="@string/new_phone" />

                <EditText
                    android:layout_width="match_parent"
                    android:inputType="phone"
                    android:padding="6dp"
                    android:background="@color/colorTextbox"
                    android:layout_height="wrap_content"
                    android:id="@+id/new_phone"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:background="@color/colorLayout"
                android:padding="10dp"
                android:layout_height="wrap_content">
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="28dp"
                    android:text="@string/fa_check_square_o"
                    android:id="@+id/btnSignup"
                    android:textStyle="bold"
                    android:textSize="20sp"
                    android:textColor="@color/colorWhite"
                    android:background="@color/colorAccent"
                    android:layout_gravity="right" />
            </LinearLayout>
        </LinearLayout>

    </ScrollView>

</LinearLayout>