<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:id="@+id/icons_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    android:padding="10dp"
    android:layout_marginBottom="6dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:background="@color/colorLayout"
        android:padding="10dp"
        android:layout_marginBottom="6dp"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="fill_parent"
            android:layout_height="145sp"
            android:id="@+id/det_img"
            android:src="@drawable/event"
            android:layout_gravity="center_horizontal" />
        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="10dp"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:width="80dp"
                android:text="@string/event_title"
                android:layout_height="match_parent" />
            <TextView
                android:layout_width="wrap_content"
                android:text="@string/app_name"
                android:id="@+id/det_title"
                android:textStyle="bold|italic"
                android:layout_height="match_parent" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="10dp"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:width="80dp"
                android:text="@string/event_date"
                android:layout_height="match_parent" />
            <TextView
                android:layout_width="wrap_content"
                android:text="@string/app_name"
                android:id="@+id/det_date"
                android:textStyle="bold|italic"
                android:layout_height="match_parent" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="10dp"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:width="80dp"
                android:text="@string/event_venue"
                android:layout_height="match_parent" />
            <TextView
                android:layout_width="wrap_content"
                android:text="@string/app_name"
                android:id="@+id/det_venue"
                android:textStyle="bold|italic"
                android:layout_height="match_parent" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="10dp"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:width="80dp"
                android:text="@string/event_price"
                android:layout_height="match_parent" />
            <TextView
                android:layout_width="wrap_content"
                android:text="@string/app_name"
                android:id="@+id/det_price"
                android:textStyle="bold|italic"
                android:layout_height="match_parent" />
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:background="@color/colorLayout"
        android:padding="10dp"
        android:layout_marginBottom="6dp"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:text="@string/app_name"
            android:id="@+id/det_details"
            android:layout_height="match_parent" />
    </LinearLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:background="@color/colorLayout"
        android:padding="6dp"
        android:layout_marginBottom="6dp"
        android:layout_height="45dp">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/fa_share_square_o"
            android:id="@+id/det_btnShare"
            android:textSize="32sp"
            android:textStyle="bold"
            android:textColor="@color/colorAccent"
            android:background="@color/colorWhite"
            android:layout_gravity="left" />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/fa_money"
            android:id="@+id/det_btnBuy"
            android:textSize="32sp"
            android:textStyle="bold"
            android:textColor="@color/colorAccent"
            android:background="@color/colorWhite"
            android:layout_gravity="right"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />

    </RelativeLayout>
</LinearLayout>